<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/homepage" />
        <item
            android:id="@+id/nav_counselor"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/counselling" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_casino_black_24dp"
            android:title="@string/eventRegisted" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/baseline_person_black_24dp"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="Sign Out" />
    </group>



</menu>
