<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_orangered"
    android:padding="16dp"
    tools:context=".login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/image_logo_transparent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="145dp"
        android:text="@string/app_name"
        android:textColor="@color/snow"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput_loginId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textinput_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="#11000000"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:errorTextAppearance="@color/whitesmoke">

        <EditText
            android:id="@+id/text_input_loginId"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/text_input_loginId"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/textinput_loginId"
        android:layout_alignBottom="@+id/btn_login"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="78dp"
        android:background="#11000000"
        app:passwordToggleEnabled="true"
        app:errorTextAppearance="@color/whitesmoke"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/text_input_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"

            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_above="@+id/text_no_account"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/gradient_orange"
        android:text="@string/login"
        />


    <TextView
        android:id="@+id/text_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:gravity="center_horizontal"
        android:textSize="18dp"
        android:text="@string/no_account_yet" />




</RelativeLayout>